# internship-hpc-repo-template

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE  Llama2_zero_shot_classf_logit_lens.ipynb  README.md  causal_validation_analysis.py  check-coverage.sh  contributing.md  emotional_mi_pipeline.py  logit_lens_analysis.py  pyproject.toml
.github/workflows/: ci.yml
doc/: run_slurm_train.md
examples/: example_config.yaml  sample_data.txt
src/: config.py  example_func.py  main.py  model_assistant.py  run_slurm.py  train.py  utils.py
src/slurm_scripts/: template.slurm
tests/integration/: test_main_integration.py  test_run_slurm_integration.py  test_training_integration.py
tests/unit/: test_config.py  test_example_func.py  test_model_assistant.py  test_run_slurm.py  test_train.py  test_utils.py
