[tool.poetry]
name = "internship-project-xxx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.1"
coverage = "^7.9.2"
pytest-asyncio = "^1.1.0"


[tool.poetry.group.util.dependencies]
ipykernel = "^6.30.0"
python-dotenv = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
