[tool.poetry]
name = "internship-project-xxx"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT License"
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.1"
pandas = "^2.3.1"
pyyaml = "^6.0.2"
seaborn = "^0.13.2"
accelerate = "^1.9.0"
transformers = "^4.53.2"
torch = "^2.7.1"
datasets = "^4.0.0"
pydantic = "^2.11.7"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pylint = "^3.3.7"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
pytest-mock = "^3.14.1"
coverage = "^7.9.2"
pytest-asyncio = "^1.1.0"


[tool.poetry.group.util.dependencies]
ipykernel = "^6.30.0"
python-dotenv = "^1.1.1"


[tool.black]
line-length = 79
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[tool.flake8]
max-line-length = 79
extend-ignore = "E203, W503"
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["."]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -ra -s"
pythonpath = [
  "src"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
